tests/lang/compile_fail/or_pattern_binding.koja
fn main
  x = 5
  match x
    1 | n -> n.print()
    _ -> "other".print()
  end
end
